# src/routes/index.js
@@ -1,6 +1,7 @@
 const router = require("express").Router();
 
 router.use("/api-docs", require("./swagger"));
+router.use("/food", require("./food"));
 router.use("/contacts", require("./contacts"));
 
 router.get("*", (req, res) => {
